--- a/index.html
+++ b/index.html
@@ -4,8 +4,9 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Glenson Ansin</title>
-    <link rel="stylesheet" href="/global.css">
+    <title>Glenson Ansin - Portfolio</title>
+    <link rel="stylesheet" href="/globals.css">
+    <link rel="stylesheet" href="https://unicons.iconscout.com/release/v4.0.8/css/line.css">
   </head>
   <body>
     <div id="root"></div>
